// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/primitives/tag/Tag should match the snapshot on show 1`] = `
<div
  className="Tag Tag--xs test"
>
  <span
    className="Tag__text"
  >
    Test text
  </span>
</div>
`;

exports[`components/primitives/tag/Tag should match the snapshot with "success" variant 1`] = `
<div
  className="Tag Tag--xs Tag--success test"
>
  <span
    className="Tag__text"
  >
    Test text
  </span>
</div>
`;

exports[`components/primitives/tag/Tag should match the snapshot with icon 1`] = `
<div
  className="Tag Tag--xs test"
>
  <span
    className="Tag__icon"
  >
    <AlertCircleOutlineIcon
      size={10}
    />
  </span>
  <span
    className="Tag__text"
  >
    Test text
  </span>
</div>
`;

exports[`components/primitives/tag/Tag should match the snapshot with size "sm" 1`] = `
<div
  className="Tag Tag--sm test"
>
  <span
    className="Tag__text"
  >
    Test text
  </span>
</div>
`;

exports[`components/primitives/tag/Tag should match the snapshot with uppercase prop 1`] = `
<div
  className="Tag Tag--xs Tag--uppercase test"
>
  <span
    className="Tag__text"
  >
    Test text
  </span>
</div>
`;

exports[`components/primitives/tag/Tag should transform into a button if onClick provided 1`] = `
<button
  className="Tag Tag--xs Tag--clickable test"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <span
    className="Tag__text"
  >
    Test text
  </span>
</button>
`;
